# uka-lean

./: .gitignore  CHANGELOG.md  Main.lean  README.md  UkaLean.lean  lake-manifest.json  lakefile.toml  test.c  test.lean  test_bin.lean  test_ghost.c  test_trim.lean  todo.md
.github/workflows/: release.yml
PuraShiori/: Exporta.lean  Loop.lean  Nuculum.lean  Responsum.lean  Rogatio.lean  SakuraScriptum.lean
UkaLean/: Exemplum.lean  Exporta.lean  Loop.lean  Macro.lean  Nuculum.lean  Protocollum.lean  Responsum.lean  Rogatio.lean  SakuraScriptum.lean  StatusPermanens.lean  Syntaxis.lean  Varia.lean
examples/sample-ghost/: SampleGhost.lean  lake-manifest.json  lakefile.toml
examples/sample-ghost/SampleGhost/: Handlers.lean  Memoria.lean
examples/sample-ghost/ffi/: shiori.c
ffi/: proxy32.c  proxy64.c  shiori.c
procurator/: Cargo.toml
procurator/probatio/src/: main.rs
procurator/procurator32/: Cargo.toml
procurator/procurator32/src/: lib.rs
proxy/: Cargo.toml
proxy/ghost_host/: Cargo.toml
proxy/ghost_host/src/: main.rs
proxy/probatio/: Cargo.toml
proxy/probatio/src/: main.rs
proxy/proxy32/: Cargo.toml
proxy/proxy32/src/: lib.rs
test-ghost/: Ghost.lean  Main.lean  TestMain.lean  lake-manifest.json  lakefile.toml
test-ghost/ffi/: shiori.c
