[package]
name = "probatio"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "probatio"
path = "src/main.rs"

[dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Memory",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemServices",
    "Win32_System_Diagnostics_Debug",
] }
